--- a/Beacon/Info.plist
+++ b/Beacon/Info.plist
@@ -36,5 +36,28 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb122272664951496</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>122272664951496</string>
+    <key>FacebookDisplayName</key>
+    <string>Beacon</string>
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
+    
 </dict>
 </plist>
